# esp_prog_vscode_debug

./: CMakeLists.txt  Dockerfile  README.md  sdkconfig.defaults.esp32
.devcontainer/: devcontainer.json
main/: CMakeLists.txt  gattc_demo.c  note_c_hooks.c  note_c_hooks.h  omron_defs.h  omron_demo.c  omron_gap_scan.c  omron_gap_scan.h  omron_gatt_dis.c  omron_gatt_dis.h  omron_gatt_scan.c  omron_gatt_scan.h  omron_profile_id.h  omron_uuids.h
tutorial/: Gatt_Client_Example_Walkthrough.md
